# RayTracing

./: CMakeLists.txt  README.md  aabb.h  bvh.h  camera.h  constants.h  interval.h  main.cpp  material.h  ray.h  record.h  scene.h  texture.h  vec_tools.h
models/: bee.mtl  scupture.stl  stars.mtl  stone_set.mtl  tree.mtl
object/: constant_medium.h  object.h  quad.h  sphere.h  triangle.h
utils/: rtw_stb_image.h
